--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -750,4 +750,7 @@
 
     <!-- Do Not Translate.  Sender identity for global notification synchronization. -->
     <string name="notification_sender_id"></string>
+    <!-- This is a label on a menu item. Pressing this menu item allows the
+         user to go to the calendars to display [CHAR LIMIT=20] -->
+    <string name="go_to">Go to</string>
 </resources>
