--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -280,4 +280,21 @@
     <!-- This is a label on a menu item. Pressing this menu item allows the
          user to go to the calendars to display [CHAR LIMIT=20] -->
     <string name="go_to">"转到"</string>
+
+    <!-- Delete Events related -->
+    <string name="events_delete">删除事件</string>
+    <string name="action_select_all">全选</string>
+    <string name="action_select_none">取消全选</string>
+    <string name="action_delete">完成</string>
+    <string name="all_events">所有事件</string>
+    <string name="no_events">没有可用的事件</string>
+    <string name="evt_del_dlg_title">删除事件？</string>
+    <string name="evt_del_dlg_msg_selected">将删除选中的事件</string>
+    <string name="evt_del_dlg_msg_all">所有事件都将被删除</string>
+    <string name="no_events_selected">没有事件被选中</string>
+
+  <plurals name="events_selected">
+    <item quantity="zero">没有选择事件</item>
+    <item quantity="other">已选择 %1$d</item>
+  </plurals>
 </resources>
