--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -280,4 +280,20 @@
     <!-- This is a label on a menu item. Pressing this menu item allows the
          user to go to the calendars to display [CHAR LIMIT=20] -->
     <string name="go_to">"轉到"</string>
+
+    <!-- Delete Events related -->
+    <string name="events_delete">刪除活動</string>
+    <string name="action_select_all">全選</string>
+    <string name="action_select_none">取消全選</string>
+    <string name="action_delete">完成</string>
+    <string name="all_events">所有活動</string>
+    <string name="no_events">沒有可用的活動</string>
+    <string name="evt_del_dlg_title">刪除活動嗎？</string>
+    <string name="evt_del_dlg_msg_selected">將刪除已選取的活動</string>
+    <string name="evt_del_dlg_msg_all">將刪除所有活動</string>
+    <string name="no_events_selected">沒有已選取的活動</string>
+
+  <plurals name="events_selected">
+    <item quantity="other">已選擇 %1$d 個活動</item>
+  </plurals>
 </resources>
